--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,11 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            {% if "placeholder" in about.nobody.jg %}
+                <img class="card-img-top" src="{% static 'images/nobody.jpg' %}" width="75%" alt="placeholder image">
+            {% else %}
+                <img src="" alt="{{ about.profile_image }}" alt="{{ about.title }}" class="card-imag-top" width="75%">
+            {% endif %}
         </div>
         <div class="col-8">
             <!-- Title goes between these h2 tags -->
